<resources>
    <string name="app_name">Sensors</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main">Sensor Data</string>
    <string name="startButton">Start</string>
    <string name="stopButton">Stop</string>
    <string name="results">Sensor results:</string>
    <string name="acceleration">Acceleration:</string>
    <string name="orientation">Orientation:</string>
    <string name="gyroscope">Gyroscope:</string>
    <string name="magneticfield">Magnetic field:</string>
    <string name="proximity">Proximity:</string>
    <string name="luminosity">Luminosity:</string>
    <string name="barometer">Barometer:</string>
    <string name="altitude">Altitude:</string>
    <string name="signalstrength">Signal strength:</string>
    <string name="wifilevel">WiFi level:</string>
</resources>
